--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ body{
     font-size: 1em;
 }
 
+footer{
+    text-align: right;
+    font-size: .75em;
+}
+
 .tabLinks{
     color:black;
     border: 1px solid #fa003f; 
@@ -38,13 +43,17 @@ body{
     color: #fa003f; 
 }
 
-footer{
-    text-align: right;
-    font-size: .75em;
-}
-
 .tabContent{
     display: none;
+}
+
+.sameLine{
+    display: inline-block;
+    margin: 0;
+}
+
+.slider{
+    accent-color: #fa003f; 
 }
 
 #addCart{
@@ -56,5 +65,9 @@ footer{
     font-family: 'Courier New', Courier, monospace;
     font-size:1em;
     font-weight:bold;
+}
 
+#addCart:hover{
+    cursor: pointer;
+    color: #fa003f; 
 }
